Bug 318787 - Linked images don't display -- bad path in XML
Summary: Linked images don't display -- bad path in XML
Status: RESOLVED FIXED
Alias: None
Product: libkdeedu
Classification: Unmaintained
Component: keduvocdocument (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-24 00:32 UTC by DarkWyrm
Modified: 2013-05-21 20:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DarkWyrm 2013-04-24 00:32:25 UTC
Linked pictures in Column 1 don't show when a previously saved project is opened. The answer displays in Column 2 just fine, but the corresponding cell in Column 1 is blank. Examination of the XML in the project file reveals a bad relative path inside the image tags.

If the project is saved at /home/myuser/projectFolder/ and the linked picture is at /home/myuser/projectFolder/pictures/myPicture.jpg, the path in the project file will be home/myuser/projectFolder/pictures/myPicture.jpg even though it should be just pictures/myPicture.jpg.

This only exhibits itself when pictures are linked in a new project which has not yet been saved to disk. If the project has been saved prior to linking pictures, everything is stored correctly.

Reproducible: Always

Steps to Reproduce:
1. Start KWordQuiz
2. Link a picture into Column 1
3. Press tab and add some text into Column 2
4. Save the project into the parent folder of the linked picture.
5. Close KWordQuiz, start it back up, and open the saved project.
Actual Results:  
Text is displayed in Column 2, linked pictures in Column 1 are not displayed. Because no text was added to Column 1 cells, they appear blank.

Expected Results:  
Pictures should be displayed
Comment 1 Peter Hedlund 2013-05-08 21:29:10 UTC
This is a bug in the keduvocdocument library. Parley suffers from the same issue.
Comment 2 Christoph Feck 2013-05-21 20:51:41 UTC
Git commit 6e38b67fce6e5ae78e4d2b66975afc4d6ac531a5 by Christoph Feck.
Committed on 21/05/2013 at 22:48.
Pushed by cfeck into branch 'KDE/4.10'.

Fix relative paths in saved kvtml documents
FIXED-IN: 4.10.4
REVIEW: 110432

M  +3    -1    keduvocdocument/keduvocdocument.cpp
M  +2    -2    keduvocdocument/keduvockvtml2writer.cpp

http://commits.kde.org/libkdeedu/6e38b67fce6e5ae78e4d2b66975afc4d6ac531a5