Fix relative paths in saved kvtml documents

BUG: 318787
FIXED-IN: 4.10.4
REVIEW: 110432